disable WPM, deep sleep timeout to 30 mins

--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -1,15 +1,11 @@
-# go to sleep after one hour (1*60*60*1000ms)
-
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
-
-CONFIG_ZMK_SLEEP=y
-
-# Turn on logging, and set ZMK logging to debug output
-# CONFIG_ZMK_USB_LOGGING=n
 #
 # Copyright (c) 2022 Darryl deHaan
 # SPDX-License-Identifier: MIT
 #
+
+# Turn on logging, and set ZMK logging to debug output
+# CONFIG_ZMK_USB_LOGGING=n
+
 # Enable 32kHz crystal
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
@@ -24,7 +20,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-
 
 #CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
@@ -49,5 +44,11 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
 
-#soft off
+# power management
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000 # go to sleep after 30 minutes (30*60*1000ms)
 CONFIG_ZMK_PM_SOFT_OFF=y
+
+# display
+CONFIG_ZMK_WPM=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
