--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -46,7 +46,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
 
 # power management
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000 # go to sleep after 30 minutes (30*60*1000ms)
+# go to sleep after 30 minutes (30*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_PM_SOFT_OFF=y
 
 # display
