--- a/build.yaml
+++ b/build.yaml
@@ -7,5 +7,6 @@ include:
     artifact-name: eyelash_sofle_studio_left
   - board: eyelash_sofle_right
     shield: nice_view_custom
+    artifact-name: eyelash_sofle_right
   # - board: nice_nano_v2
   #   shield: settings_reset
