--- a/build.yaml
+++ b/build.yaml
@@ -1,12 +1,12 @@
 ---
 include:
-  - board: eyelash_sofle_left
-    shield: nice_view_custom
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-    artifact-name: eyelash_sofle_studio_left
-  - board: eyelash_sofle_right
-    shield: nice_view_custom
-    artifact-name: eyelash_sofle_right
-  # - board: nice_nano_v2
-  #   shield: settings_reset
+  # - board: eyelash_sofle_left
+  #   shield: nice_view_custom
+  #   snippet: studio-rpc-usb-uart
+  #   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+  #   artifact-name: eyelash_sofle_studio_left
+  # - board: eyelash_sofle_right
+  #   shield: nice_view_custom
+  #   artifact-name: eyelash_sofle_right
+  - board: nice_nano_v2
+    shield: settings_reset
