--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -45,9 +45,11 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
 
 # power management
+# go to idle state after 10 minutes (10*60*1000ms)
+CONFIG_ZMK_IDLE_TIMEOUT=600000
 CONFIG_ZMK_SLEEP=y
-# go to sleep after 30 minutes (30*60*1000ms)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# go to sleep after 1 hour (1*60*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_ZMK_PM_SOFT_OFF=y
 
 # display
